# smelter-vulkan

./: .gitignore  CLAUDE.md  Cargo.toml  ONECLICKOS.md  README.md
crates/process_helper/: Cargo.toml
crates/process_helper/src/: main.rs
crates/smelter-vulkan/: Cargo.toml  build.rs
crates/smelter-vulkan/src/: blit.wgsl  compositor.rs  external_memory.rs  main.rs  window.rs
patches/: libvulkan.sh
src/: assets.rs  compositor.rs  main.rs  window.rs
