[package]
name = "smelter_vulkan"
version = "0.1.0"
edition = "2024"

[dependencies]
# Compositor integration
smelter-core = { git = "https://github.com/software-mansion/smelter.git", tag = "v0.5.0", features = [
    "vk-video",
] }
smelter-render = { git = "https://github.com/software-mansion/smelter.git", tag = "v0.5.0" }
# Runtime
tokio = { version = "1", features = ["full"] }
# Graphics (required by compositor)
wgpu = "25.0.2"
# Error handling and utilities
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# HTTP client for asset downloads
reqwest = { version = "0.12", features = ["blocking"] }
