[package]
name = "smelter_vulkan"
version = "0.1.0"
edition = "2024"

[dependencies]
# Compositor integration
smelter-core = { git = "https://github.com/software-mansion/smelter.git", rev = "005137d" }
smelter-render = { git = "https://github.com/software-mansion/smelter.git", rev = "005137d", features = [
    "web-renderer",
] }
# Runtime
tokio = { version = "1", features = ["full"] }
# Graphics (required by compositor)
wgpu = "25.0.2"
wgpu-hal = "25.0.2" # Needed for HAL access
wgpu-types = "25.0.0" # For TextureUses (25.0.2 doesn't exist)
wgpu-core = "25.0.0" # For core functionality
winit = "0.30.12"
# Vulkan external memory interop
ash = "0.38.0"
pollster = "0.3" # For blocking on async operations
# Error handling and utilities
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# Channels for bounded(1) implementation
crossbeam-channel = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
# DeckLink is only supported on Linux
smelter-core = { git = "https://github.com/software-mansion/smelter.git", rev = "005137d", features = [
    "decklink",
    "vk-video",
] }
decklink = { git = "https://github.com/software-mansion/smelter.git", rev = "005137d" }
